# simple-mtpfs

./: .gitignore  AUTHORS  INSTALL  NEWS  README  README.md  autogen.sh  configure.ac  makefile.am  simple-mtpfs.spec
debian/: changelog  control  copyright  rules  simple-mtpfs.links  simple-mtpfs.manpages  watch
man/: makefile.am  simple-mtpfs.1
src/: makefile.am  simple-mtpfs-driver-base.cpp  simple-mtpfs-driver-base.h  simple-mtpfs-fuse.cpp  simple-mtpfs-fuse.h  simple-mtpfs-libmtp.cpp  simple-mtpfs-libmtp.h  simple-mtpfs-log.cpp  simple-mtpfs-log.h  simple-mtpfs-ls.cpp  simple-mtpfs-main.cpp  simple-mtpfs-mtp-device.cpp  simple-mtpfs-mtp-device.h  simple-mtpfs-sha1.cpp  simple-mtpfs-sha1.h  simple-mtpfs-tmp-files-pool.cpp  simple-mtpfs-tmp-files-pool.h  simple-mtpfs-tmpdir-driver.cpp  simple-mtpfs-tmpdir-driver.h  simple-mtpfs-type-basic.h  simple-mtpfs-type-dir.cpp  simple-mtpfs-type-dir.h  simple-mtpfs-type-file.cpp  simple-mtpfs-type-file.h  simple-mtpfs-type-tmp-file.cpp  simple-mtpfs-type-tmp-file.h  simple-mtpfs-util.cpp  simple-mtpfs-util.h
